--- a/style.css
+++ b/style.css
@@ -1,6 +1,16 @@
 :root{
 
 }
+.inner{
+    height: 100vh;
+    width: 100vw;
+}
+.logo{
+    height: 50vh;
+    width:100vw;
+}
 .name{
-    font-size=2em;
+    height: 50vh;
+    width:100vw;
+    font-size:2em;
 }
