--- a/style.css
+++ b/style.css
@@ -1,16 +1,26 @@
 :root{
-
+    --color-1:red;
 }
 .inner{
     height: 100vh;
     width: 100vw;
+    overflow: hidden;
 }
 .logo{
-    height: 50vh;
+    height: 70vh;
     width:100vw;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    margin-top: 2vh;
 }
 .name{
-    height: 50vh;
+    height: 30vh;
     width:100vw;
-    font-size:2em;
+    color: var(--color-1);
+    justify-content: center;
+    align-items: center;
+    display: inherit;
+    text-align: center;
+    font-size:4em;
 }
