link html pages

--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@
     font-size:4em;
 }
 /* instruction, score, start, play and text this is for home page */
-#instruction{
+.instruction{
     height: 20vh;
     font-size: 4vw;
     color: var(--color-2);
@@ -62,6 +62,33 @@
     color: var(--color-1);
     border-color: var(--color-1);
     background-color: var(--color-4);
+}
+/* this is for instruction page */
+.close{
+    height: 5vh;
+    width: 100vw;
+    color: var(--color-1);
+    text-align: right;
+    font-size:2em;
+}
+.header{
+    height: 10vh;
+    width:100vw;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    color: var(--color-2);
+    font-size:3em;
+}
+.content{
+    height: 60vh;
+    width: 100vw;
+    display: inherit;
+    color: var(--color-2);
+    font-size:2em;
+}
+hr{
+    border: 1px solid var(--color-2);
 }
 /* this for last page */
 .full{
