--- a/canvas.css
+++ b/canvas.css
@@ -1,5 +1,6 @@
 body{
     margin: 0%;
+    /* padding: 0%; */
 }
 
 #game{
@@ -17,6 +18,7 @@ body{
  background-color: #fAfAfA;
  border:2px solid #FF362E;
  text-align: center;
+ 
 }
 
 .title{
@@ -24,5 +26,6 @@ font-size: 2vw;
 }
 
 .score{
-  font-size: 5vw;  
+  font-size: 5vw; 
+  line-height: 10vh; 
 }
