--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root{
     --color-1:red;
-    --color-2:yellowgreen;
+    --color-2:rgb(139, 190, 35);
     --color-3:white;
     --color-4:rgb(240, 229, 229);
 }
