--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root{
-    --color-1:red;
-    --color-2:yellowgreen;
+    --color-1:#FF362E;
+    --color-2:#BADC57;
     --color-3:white;
     --color-4:rgb(252, 238, 238);
 }
