--- a/style.css
+++ b/style.css
@@ -1,13 +1,15 @@
 :root{
     --color-1:red;
-    --color-2:rgb(139, 190, 35);
+    --color-2:black;
     --color-3:white;
     --color-4:rgb(240, 229, 229);
+    --color-5:#7DEEFE;
 }
 .inner{
     height: 100vh;
     width: 100vw;
     overflow: hidden;
+    background-color: #7DEEFE;
 }
 .logo{
     height: 70vh;
