--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
     height: 100vh;
     width: 100vw;
     overflow: hidden;
-    background-color: #7DEEFE;
+    background-color: var(--color-5);
 }
 .logo{
     height: 70vh;
@@ -101,18 +101,15 @@ hr{
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: var(--color-5);
     font-size: 3em;
     color: var(--color-2);
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
-.up,.down{
-    height: 30vh;
-    width: 85vw;
-}
 .rect{
     height: 40vh;
-    width: 60vw;
-    border-radius: 20px;
+    width: 50vw;
+    border-radius: 30px;
     border-color: var(--color-1);
     background-color: var(--color-4);
 }
@@ -127,7 +124,7 @@ hr{
     justify-content: center;
     align-items: center;
     display: flex;
-    font-size: 3em; 
+    font-size: 2.5em; 
 }
 
 
