--- a/canvas.css
+++ b/canvas.css
@@ -10,22 +10,29 @@ body{
 }
 
 #container{
- height: 18vh;
- width: 15vw;
+ height: 20vh;
+ width: 35vw;
  border-radius: 4%;
  margin-left: 2%;
  margin-top: 2%;
  background-color: #fAfAfA;
  border:2px solid #FF362E;
- text-align: center;
- 
 }
 
 .title{
+margin-left: 8%;
 font-size: 2vw;
+position: relative;
 }
 
 .score{
   font-size: 5vw; 
   line-height: 10vh; 
+}
+
+#random{
+  height: 10vh;
+  position: absolute;
+  margin-top: -1%;
+  margin-left: 10%;
 }
