--- a/style.css
+++ b/style.css
@@ -34,10 +34,11 @@ body{
 /* instruction, score, start, play and text this is for home page */
 .instruction{
     height: 20vh;
-    font-size: 4vw;
+    font-size: 3vw;
     color: var(--color-2);
     width:100vw;
-    text-align: right;   
+    text-align: right; 
+    cursor: pointer;  
 }
 .score{
     height: 50vh;
@@ -55,6 +56,7 @@ body{
     border-color: var(--color-1);
     text-align: center;
     border-radius: 40px;
+    outline: none;
 }
 .play{
     height: 100vh;
@@ -77,7 +79,8 @@ body{
     width: 100vw;
     color: var(--color-1);
     text-align: right;
-    font-size:2em;
+    font-size:2vw;
+    cursor: pointer;
 }
 .header{
     height: 10vh;
