update in stylesheet

--- a/style.css
+++ b/style.css
@@ -59,19 +59,22 @@ body{
     outline: none;
 }
 .play{
-    height: 100vh;
-    width:100vw;
+    /* height: 100vh;
+    width:100vw; */
     font-size:2em;
     justify-content: center;
     align-items: center;
     align-content: flex-start;
+    outline: none;
 }
 .start{
     border-radius: 30px;
     color: var(--color-1);
     border-color: var(--color-1);
     background-color: var(--color-4);
-    width: 20vw;
+    width: 12vw;
+    height:10vh;
+    outline: none;
 }
 /* this is for instruction page */
 .close{
