--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ hr{
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 3em;
+    font-size: 3vw;
     color: var(--color-2);
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
@@ -150,7 +150,7 @@ hr{
     justify-content: center;
     align-items: center;
     display: flex;
-    font-size: 2.5em; 
+    font-size: 10vw; 
 }
 
 
